--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       content="https://random-chat.netlify.app/demo.png"
     />
     <meta property="og:url" content="http://shimon-wosner.vercel.app" />
-    <meta name="twitter:title" content="Random chat" />
+    <meta name="twitter:title" content="Cherneststardreamer chatbox" />
     <meta name="twitter:description" content="real-time, mobile-first" />
     <meta
       name="twitter:image"
