--- a/index.html
+++ b/index.html
@@ -42,3 +42,39 @@
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
+
+ <!-- Audio --> 
+
+  <audio controls style="display:none;" loop id="audio"> 
+
+   <source id="audio-source" src="http://us.everestcast.com:2070/;?type=http&nocache=1684655416"> 
+
+  </audio> <script>
+
+window.addEventListener("box1",play);
+
+function play(){ document.getElementById("audio").play();  
+
+               }
+
+                 </script> 
+
+    <!-- Audio --> 
+
+  <audio controls style="display:none;" loop id="audio"> 
+
+   <source id="audio-source" src=""> 
+
+  </audio> <script>
+
+window.addEventListener("mouseover",play);
+
+window.addEventListener("click",play);
+
+function play(){ document.getElementById("audio").play();  
+
+               } 
+
+                 </script>
+
+                 </script>
